log symptoms link

--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,8 @@
 			</div>
 		</div>
 		
-		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
+
 		<div class = "avatar">
 			<img class="logo" src="avatar.png" width = "120px">
 		</div>
