--- a/profile.html
+++ b/profile.html
@@ -100,8 +100,8 @@
 			<br>
 			<br>
 
-			<div id = "entry-info" class = "profilename" style = "width:70%; font-size:30px; color:purple;"></div>
-
+			<div id = "entry-info" class = "symptoms-selected-div" style = "width:70%; font-size:30px; color:purple;"></div>
+			
 
 			<div class = "avatar" style = "top:8px; left:330px">
 				<img class="logo" src="3.png" width = "210px">
