--- a/profile.html
+++ b/profile.html
@@ -87,9 +87,10 @@
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
-		<div class = "avatar">
+		<!-- <div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
-		</div>
+		</div> -->
+	
 	</div>
 
 	
