--- a/profile.html
+++ b/profile.html
@@ -108,9 +108,9 @@
 			</div>
 			
 
-			<div class = "avatar" style = "top:8px; left:330px">
+			<!-- <div class = "avatar" style = "top:8px; left:330px">
 				<img class="logo" src="3.png" width = "210px">
-			</div>
+			</div> -->
         </div>
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
@@ -191,6 +191,7 @@
 
 		var entryContent = [
 				"Reported: headaches, depression and difficulty focusing",
+				"head: pain (8)",
 				"Reported: nausea and flu symptoms",
 				"Reported: headaches and difficulty focusing",
 				"Reported: stomachache, nausea and flu symptoms",
