--- a/profile.html
+++ b/profile.html
@@ -103,7 +103,7 @@
 
 			<div id = "entry-info" class = "symptoms-selected-div">
 		
-				<p id = "entry-info-text" class = "symptoms-selected-text"> </p>
+				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 
 			</div>
 			
