--- a/profile.html
+++ b/profile.html
@@ -193,7 +193,7 @@
 				"Reported: headaches, depression and difficulty focusing",
 				"head: pain (8)",
 				"mental: sleep (10)",
-				"Reported: nausea and flu symptoms",
+				"Reported: nausea and flu symptoms <br> nauea <br>",
 				"Reported: headaches and difficulty focusing",
 				"Reported: stomachache, nausea and flu symptoms",
 				"Reported: weakness and achiness",
