--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,19 @@
 			<br>
 			<br>
 
+			<div id = "entry-info" class = "symptoms-selected-div-block">
+
+				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 			<div id = "entry-info" class = "profilename" style = "width:70%; font-size:30px; color:purple;"></div>
+
+			</div>
+
+
+			<!-- <div class = "avatar" style = "top:8px; left:330px">
+			<div class = "avatar" style = "top:8px; left:330px">
+				<img class="logo" src="3.png" width = "210px">
+			</div> -->
+			</div>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -186,7 +198,9 @@
 
 		var entryContent = [
 				"Reported: headaches, depression and difficulty focusing",
-				"Reported: nausea and flu symptoms",
+				"head: pain (8)",
+ 				"mental: sleep (10)",
+ 				"Reported: nausea and flu symptoms <br> nauea <br>",
 				"Reported: headaches and difficulty focusing",
 				"Reported: stomachache, nausea and flu symptoms",
 				"Reported: weakness and achiness",
@@ -208,7 +222,9 @@
 	   
 	   function select(val)
 	   {
-			var entryInfo = document.getElementById("entry-info");
+			var entryInfo = document.getElementById("entry-info-text");
+ 			entryInfo.classList.remove("test");
+			 
 			entryInfo.innerHTML = entryContent[val - 1];
 
 			var item = document.getElementById(val);
