--- a/loghistory.html
+++ b/loghistory.html
@@ -164,9 +164,9 @@ autocomplete(document.getElementById("inputEntry"), entries);
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
 
-		<div class = "avatar">
+		<!-- <div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
-		</div>
+		</div> -->
 	</div>
 
 	
