--- a/loghistory.html
+++ b/loghistory.html
@@ -37,7 +37,7 @@
 		<label class = "title" width="100%">Log History</label>
 		<br>
 		<br>
-		<label class = "profilename">Keep track of all your entries by date and the most common symptoms you have recently logged</label>
+		<label class = "summary">Keep track of all your entries by date and the most common symptoms you have recently logged</label>
 		<br> 
      
 
