--- a/homepage.html
+++ b/homepage.html
@@ -45,33 +45,33 @@
 				   <label class = "title"></label>
 			
 			
-				<label  class = "task" onclick = "location.href ='loghistory.html';"style = "padding-top:8px; padding-bottom:8px">
+				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:8px; padding-bottom:8px">
 						November 9th 2021
 						<label class = "type-of-log">
 							mental
 						</label>
 				</label>
 			
-				<label  class = "task" onclick = "location.href ='loghistory.html';" style = "padding-top:8px; padding-bottom:8px">
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:8px; padding-bottom:8px">
 						November 8th 2021
 						<label class ="type-of-log">
 							physical
 						</label>
 				</label>
 			
-				<label  class = "task" onclick = "location.href ='loghistory.html';" style = "padding-top:8px; padding-bottom:8px">
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:8px; padding-bottom:8px">
 						November 6th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
-				 <label  class = "task" onclick = "location.href ='loghistory.html';" style = "padding-top:8px; padding-bottom:8px">
+				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:8px; padding-bottom:8px">
 						November 7th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
-				<label  class = "task" onclick = "location.href ='loghistory.html';" style = "padding-top:8px; padding-bottom:8px">
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:8px; padding-bottom:8px">
 					November 6th 2021
 					<label class = "type-of-log">
 						physical
@@ -182,7 +182,7 @@
 				<label>Insight</label>
 			</div>
 			
-			<div class="button last" onclick = "location.href='loghistory.html';">
+			<div class="button last" onclick = "location.href='profile.html';">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
 				<label>Log History</label>
 			</div>
