--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
 		<br>
-		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
+		<label class = "summary">Review the most recent entries of your symptoms to gain new insights</label>
 		<br> 
 
 		<div class= "multi-selector">
@@ -87,9 +87,9 @@
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
-		<div class = "avatar">
+<!-- 		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
-		</div>
+		</div> -->
 	</div>
 
 	
