--- a/profile.html
+++ b/profile.html
@@ -29,11 +29,9 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
-		<label class = "summary">Review the most recent entries of your symptoms to gain new insights </label>
+		<label class = "summary">Review your entries, grouped by date. To gain new insights, make sure your log is always up to date! </label>
 		<br> 
 		<br>
-		<br>
-
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
