--- a/profile.html
+++ b/profile.html
@@ -29,9 +29,131 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
-		<label class = "summary">Review your entries, grouped by date. To gain new insights, make sure your log is always up to date! </label>
-		<br> 
 		<br>
+		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
+		<br> 
+
+		<html>
+		<head>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<style>
+			* {
+			  box-sizing: border-box;
+			}
+			
+			body {
+			  font: 16px Arial;  
+			  color: black;
+			}
+			
+			/*the container must be positioned relative:*/
+			.autocomplete {
+			  position: relative;
+			  display: inline-block;
+			}
+			
+			input {
+			  border: 1px solid transparent;
+			  background-color: #f1f1f1;
+			  padding: 10px;
+			  font-size: 16px;
+			}
+			
+			input[type=text] {
+			  background-color: #f1f1f1;
+			  width: 120%;
+			}
+			
+			.autocomplete-items {
+			  position: absolute;
+			  border: 1px solid #d4d4d4;
+			  border-bottom: none;
+			  border-top: none;
+			  z-index: 99;
+			  /*position the autocomplete items to be the same width as the container:*/
+			  top: 100%;
+			  left: 0;
+			  right: 0;
+			}
+			
+			.autocomplete-items div {
+			  padding: 10px;
+			  cursor: pointer;
+			  background-color: #fff; 
+			  border-bottom: 1px solid #d4d4d4; 
+			}
+			
+			
+			</style>
+			</head>     
+			<body>
+			
+			
+			
+			<form autocomplete="off">
+			  <div class="autocomplete" style="width:300px;">
+				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)">
+			  </div>
+			</form>
+			
+			<script>
+			function autocomplete(inp, arr) {
+			  /*the autocomplete function takes two arguments,
+			  the text field element and an array of possible autocompleted values:*/
+			  var currentFocus;
+			  /*execute a function when someone writes in the text field:*/
+			  inp.addEventListener("input", function(e) {
+				  var a, b, i, val = this.value;
+				  /*close any already open lists of autocompleted values*/
+				  closeAllLists();
+				  if (!val) { return false;}
+				  currentFocus = -1;
+				  /*create a DIV element that will contain the items (values):*/
+				  a = document.createElement("DIV");
+				  a.setAttribute("id", this.id + "autocomplete-list");
+				  a.setAttribute("class", "autocomplete-items");
+				  /*append the DIV element as a child of the autocomplete container:*/
+				  this.parentNode.appendChild(a);
+				  /*for each item in the array...*/
+				  for (i = 0; i < arr.length; i++) {
+					/*check if the item starts with the same numbers as the text field value:*/
+					if (arr[i].substr(0, val.length) == val) {
+					  /*create a DIV element for each matching element:*/
+					  b = document.createElement("DIV");
+					  /*make the matching letters bold:*/
+					  b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+					  b.innerHTML += arr[i].substr(val.length);
+					  /*insert a input field that will hold the current array item's value:*/
+					  b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+					  a.appendChild(b);
+					}
+				  }
+			  });
+			  
+			
+			  function closeAllLists(elmnt) {
+				/*close all autocomplete lists in the document,
+				except the one passed as an argument:*/
+				var x = document.getElementsByClassName("autocomplete-items");
+				for (var i = 0; i < x.length; i++) {
+				  if (elmnt != x[i] && elmnt != inp) {
+					x[i].parentNode.removeChild(x[i]);
+				  }
+				}
+			  }	
+			}
+			
+			
+			
+			var entries = ["12/04/20 - diarrhea, nausea, vomiting", "01/13/21 - stress, headaches", "02/18/21 - cramps, aches", "03/23/21 - dehydration, weakness", "04/15/21 - stomachache", "05/11/21 - stress, depression", "06/05/21 - back pain", "06/10/21 - back pain, achiness, tired", "06/18/21 - eye strain", "06/24/21 - eye strain, headaches", "07/01/21 - flu symptoms", "07/09/21 - stomachache", "07/20/21 - sore throat, common cold", "07/29/21 - stress, headaches", "08/08/21 - depression", "08/19/21 - nausea", "09/01/21 - headaches, depression", "09/09/21 - nausea, flu symptoms", "09/25/21 - headaches, difficulty focusing", "10/12/21 - weakness, achiness", "10/20/21 - difficulty breathing", "11/01/21 - depression, anxiety", "11/02/21 - depression, anxiety", "11/03/21 - depression", "11/04/21 - weakness"];
+			
+			
+			autocomplete(document.getElementById("inputEntry"), entries);
+			</script>
+			
+			</body>
+			</html>
+
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
@@ -86,9 +208,9 @@
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
-<!-- 		<div class = "avatar">
+		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
-		</div> -->
+		</div>
 	</div>
 
 	
