--- a/profile.html
+++ b/profile.html
@@ -29,9 +29,9 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
 		<br>
-		<br>
-		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
+		<label class = "summary">Review the most recent entries of your symptoms. Make sure they're up to date to gain new insights!</label>
 		<br> 
+		<br>
 
 		<html>
 		<head>
