--- a/insight.html
+++ b/insight.html
@@ -31,7 +31,7 @@
 	<div class = "contentwrap" id = "tab1">
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "checkup">
-		<label class = "title" style="color: purple">Insights</label>
+		<label class = "title" style="color: #9251F7">Insights</label>
 		
 		<div class = "avatar2">
 			<img class = "logo" src="light-bulb.png" width = "70px">
