--- a/profile.html
+++ b/profile.html
@@ -27,9 +27,9 @@
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
-		<label class = "title" width="100%">Log Entries</label>
-		<br>
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
+		<label class = "title" width="100%">View all your log entries</label>
+		<br>
 		<label class = "summary">Review the most recent entries of your symptoms. Make sure they're up to date to gain new insights!</label>
 		<br> 
 		<br>
