--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
 		<label class = "title" width="100%">View all your log entries</label>
 		<br>
-		<label class = "summary">Review the most recent entries of your symptoms. Make sure they're up to date to gain new insights!</label>
+		<label class = "summary"  style= "margin-top: 5px;">Review the most recent entries of your symptoms. Make sure they're up to date to gain new insights!</label>
 		<br> 
 		<br>
 
