--- a/profile.html
+++ b/profile.html
@@ -63,6 +63,7 @@
 			input[type=text] {
 			  background-color: #f1f1f1;
 			  width: 120%;
+			  border-radius: 10px;
 			}
 			
 			.autocomplete-items {
