--- a/profile.html
+++ b/profile.html
@@ -158,7 +158,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field">
-			<label class = "summary" style = "color:#019055">Click on a date to see entry information</label>
+			<label class = "summary" style = "color:#9251F7">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
