--- a/profile.html
+++ b/profile.html
@@ -219,6 +219,7 @@
 	<div class = "contentwrap" id = tab2>
 
 		<div class = "wrapper" id = "goals" style = "top:-11px">
+			<label class = "profilename" style="color: #019055;">Details</label>
         	<label class = "title">Entry Information</label>
 			<br>
 			<br>
@@ -235,7 +236,8 @@
         </div>
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
-			<label class = "title">Key Insights</label>
+			<label class = "profilename" style="color: #f05c00;">Insights</label>
+			<label class = "title">View key insights and trends</label>
 			<br>
 			<br>
 
