--- a/profile.html
+++ b/profile.html
@@ -161,7 +161,7 @@
 			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
+				 <div class = "list" style = "overflow-y:scroll;height: 300px;height: 250px;margin-bottom: 10px;">
 				   <label class = "title"></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
