--- a/profile.html
+++ b/profile.html
@@ -208,7 +208,7 @@
 			</div>
 		</div>
 
-		<label class = "profilename" style="color: #9251F7;">You've been logging for 5 days in a row! Log now to keep streak.</label>
+		<label class = "profilename" style="color: #9251F7;">🔥 You've been logging for 5 days in a row! Log now to keep streak.</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
 		<!-- <div class = "avatar">
