--- a/profile.html
+++ b/profile.html
@@ -91,7 +91,7 @@
 			<body>
 			
 			
-			
+			<div class = log-history-container>
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:300px;">
 				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)">
@@ -207,7 +207,7 @@
 				 
 			</div>
 		</div>
-
+	</div>
 		<label class = "summary" style="color: #9251F7;">🔥 You've logged for 5 days in a row! Log now & keep streak.</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
