--- a/profile.html
+++ b/profile.html
@@ -208,7 +208,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color: #9251F7;">🔥 You've logged for 5 days in a row! Log now & keep streak.</label>
+		<label class = "summary" style="color: #9251F7;">🔥 You logged for 5 days in a row! Log now & keep streak.</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
 		<!-- <div class = "avatar">
