--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
 			}
 			
 			input[type=text] {
-			  background-color: #f1f1f1;
+				background-color: #ffffff;
 			  width: 120%;
 			  border-radius: 10px;
 			}
@@ -91,7 +91,15 @@
 			<body>
 			
 			
-			<div class = log-history-container>
+			<div class = log-history-container 
+			style = "background-color: #F0EFFA90;
+			height: 350px;
+			width: 100%;
+			padding: 20px;
+			border-radius: 15px;
+			margin-bottom: 10px;
+			margin-top: -10px;">
+
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:300px;">
 				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)">
@@ -157,51 +165,51 @@
 			</html>
 
 		<div class= "multi-selector">
-		<div class = "select-field">
+		<div class = "select-field" style = "background-color: transparent;">
 			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px;height: 250px;margin-bottom: 10px;">
-				   <label class = "title"></label>
+				 <div class = "list" style = "overflow-y:scroll; height: 250px;margin-bottom: 10px;background-color: transparent;">
+				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						September 1st 2021 
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">  
 						September 9th 2021
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						September 25th 2021  
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 3rd 2021
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 12th 2021
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 20th 2021
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 1st 2021
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 2nd 2021
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 3rd 2021
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 4th 2021
 				</label>
 				 
