--- a/profile.html
+++ b/profile.html
@@ -252,19 +252,19 @@
 
 			<div class = "goalstab">
 				<div class = "mini">
-					<label class = "summary">
+					<label class = "summary" style = "text-align: left;">
 						Headaches <br> are most associated with poor focus
 					</label>
 			    </div>
 
 				<div class = "mini">
-					<label class = "summary">
+					<label class = "summary" style = "text-align: left;">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
 				<div class = "mini">
-					<label class = "summary">
+					<label class = "summary" style = "text-align: left;">
 						Depression <br> is most associated with anxiety
 					</label>
 			    </div>
