--- a/profile.html
+++ b/profile.html
@@ -250,7 +250,7 @@
 			<br>
 			<br>
 
-			<div class = "goalstab">
+			<div class = "goalstab" style = "margin-top: -15px;">
 				<div class = "mini">
 					<label class = "summary" style = "text-align: left;">
 						Headaches <br> are most associated with poor focus
