--- a/profile.html
+++ b/profile.html
@@ -166,7 +166,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color: transparent;">
-			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
+			<label class = "summary" style = "color:rgba(212, 0, 0, 0.767)">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll; height: 250px;margin-bottom: 10px;background-color: transparent;">
