--- a/profile.html
+++ b/profile.html
@@ -166,7 +166,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color: transparent;">
-			<label class = "summary" style = "color:rgba(212, 0, 0, 0.767)">Click on a date to see entry information</label>
+			<label class = "summary" style = "color:rgb(212, 0, 0)">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll; height: 250px;margin-bottom: 10px;background-color: transparent;">
@@ -251,20 +251,20 @@
 			<br>
 
 			<div class = "goalstab" style = "margin-top: -15px;">
-				<div class = "mini">
-					<label class = "summary" style = "text-align: left;">
+				<div class = "mini"  style = "text-align: left;">
+					<label class = "summary">
 						Headaches <br> are most associated with poor focus
 					</label>
 			    </div>
 
-				<div class = "mini">
-					<label class = "summary" style = "text-align: left;">
+				<div class = "mini" style = "text-align: left;">
+					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
-				<div class = "mini">
-					<label class = "summary" style = "text-align: left;">
+				<div class = "mini" style = "text-align: left;">
+					<label class = "summary">
 						Depression <br> is most associated with anxiety
 					</label>
 			    </div>
