--- a/profile.html
+++ b/profile.html
@@ -172,44 +172,44 @@
 				 <div class = "list" style = "overflow-y:scroll; height: 222px;margin-bottom: 10px;background-color: transparent;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						September 1st 2021 
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">  
 						September 9th 2021
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						September 25th 2021  
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 3rd 2021
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 12th 2021
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 20th 2021
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 1st 2021
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 2nd 2021
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 3rd 2021
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 4th 2021
 				</label>
 				 
@@ -265,7 +265,7 @@
 
 				<div class = "mini" style = "text-align: left;">
 					<label class = "summary">
-						Depression <br> is most associated with anxiety
+						Stress <br> is most associated with eye pain
 					</label>
 			    </div>
 			</div>
