--- a/profile.html
+++ b/profile.html
@@ -174,43 +174,73 @@
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						September 1st 2021 
+						<label class = "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">  
 						September 9th 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				  </label>
 			
 				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						September 25th 2021  
+						<label class = "type-of-log">
+							physical
+						</label>
 				 </label>
 			
 				 <label class = "title"></label>
 					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 3rd 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				 </label>
 			
 				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 12th 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				 </label>
 			
 				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						October 20th 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				 </label>
 			
 				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 1st 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 2nd 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 3rd 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
 						November 4th 2021
+						<label class = "type-of-log">
+							physical
+						</label>
 				</label>
 				 
 			</div>
