--- a/profile.html
+++ b/profile.html
@@ -92,7 +92,7 @@
 			
 			
 			<div class = log-history-container 
-			style = "background-color: #F0EFFA90;
+			style = "background-color: #F0EFFA70;
 			height: 343px;
 			width: 100%;
 			padding: 20px;
@@ -102,7 +102,7 @@
 
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:300px;">
-				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)">
+				<input id="inputEntry" type="text" name="logHistory" placeholder="Search for entries by date (ex. 06/05/21)" style = "border:0.5px solid #9251F7;">
 			  </div>
 			</form>
 			
