--- a/profile.html
+++ b/profile.html
@@ -172,21 +172,21 @@
 				 <div class = "list" style = "overflow-y:scroll; height: 222px;margin-bottom: 10px;background-color: transparent;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						September 1st 2021 
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">  
 						September 9th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						September 25th 2021  
 						<label class = "type-of-log">
 							physical
@@ -194,49 +194,49 @@
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 3rd 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 12th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						October 20th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 1st 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 2nd 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 3rd 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: #9151f73a;">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
 						November 4th 2021
 						<label class = "type-of-log">
 							physical
