--- a/profile.html
+++ b/profile.html
@@ -172,73 +172,73 @@
 				 <div class = "list" style = "overflow-y:scroll; height: 222px;margin-bottom: 10px;background-color: transparent;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;";">
 						September 1st 2021 
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">  
+				  <label id = "2" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">  
 						September 9th 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "3" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						September 25th 2021  
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+					   <label id = "4" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						October 3rd 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				   <label id = "5" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						October 12th 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				 <label id = "6" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;"">
 						October 20th 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				 <label id = "7" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						November 1st 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "8" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						November 2nd 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "9" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						November 3rd 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px; background-color: transparent;">
+				<label id = "10" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;">
 						November 4th 2021
-						<label class = "type-of-log">
+						<label class = "type-of-log" style = "margin-left: 0px;">
 							physical
 						</label>
 				</label>
