--- a/profile.html
+++ b/profile.html
@@ -283,7 +283,7 @@
 			<div class = "goalstab" style = "margin-top: -15px;">
 				<div class = "mini"  style = "text-align: left;">
 					<label class = "summary">
-						Headaches <br> are most associated with poor focus
+						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
@@ -295,7 +295,7 @@
 
 				<div class = "mini" style = "text-align: left;">
 					<label class = "summary">
-						Stress <br> is most associated with eye pain
+						Stress is most associated with eye pain
 					</label>
 			    </div>
 			</div>
