--- a/profile.html
+++ b/profile.html
@@ -91,14 +91,14 @@
 			<body>
 			
 			
-			<div class = log-history-container 
+			<!-- <div class = log-history-container 
 			style = "background-color: #F0EFFA50;
 			height: 343px;
 			width: 100%;
 			padding: 20px;
 			border-radius: 15px;
 			margin-bottom: 14px;
-			margin-top: -10px;">
+			margin-top: -10px;"> -->
 
 			<form autocomplete="off">
 			  <div class="autocomplete" style="width:300px;">
@@ -169,7 +169,7 @@
 			<label class = "summary" style = "color:rgb(212, 0, 0)">Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll; height: 222px;margin-bottom: 10px;background-color: transparent;">
+				 <div class = "list" style = "overflow-y:scroll; height: 250px;margin-bottom: 10px;background-color: transparent;">
 				   <label class = "title" style = "background-color: transparent;""></label>
 			
 				   <label id = "1" class = "task" onclick = "select(this.id);" style = "display: flex;padding: 8px;justify-content: space-between;align-content: center;align-items: center;background-color: transparent;padding-left: 0px;";">
@@ -245,7 +245,7 @@
 				 
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 		<label class = "summary" style="color: #9251F7;">🔥 You logged for 5 days in a row! Log now & keep streak.</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
