--- a/profile.html
+++ b/profile.html
@@ -262,11 +262,11 @@
         	<label class = "title">Entry Information</label>
 			<br>
 			<br>
-			<div class="empty-insight" id="empty-div">
+			<div class="empty-insight" id="empty-div" style = "height:150px";>
 				<div class="emptyemoji">👈🏼</div>
 				<div class="emptytext">Select one of these insights to view data</div>
 			</div>
-			<div id = "entry-info" class = "symptoms-selected-div-block">
+			<div id = "entry-info" class = "symptoms-selected-div-block" id= "entry-details-block">
 				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 			</div>
 
@@ -384,7 +384,7 @@
  			entryInfo.classList.remove("test");
 
 			var hideDiv = document.getElementById("empty-div");
-			
+			var showDiv = document.getElementById("entry-details-block");
 
 
 			entryInfo.innerHTML = entryContent[val - 1];
@@ -396,8 +396,9 @@
 			{
 				if(id != 0)
 				{
+					hideDiv.style.display = "none";
+					showDiv.style.display = "block";
 					document.getElementById(id).className = "task";
-					hidDiv.style.display = "none";
 				}
 
 				id = val;
@@ -419,8 +420,11 @@
 
 				else
 				{
+					hideDiv.style.display = "none";
+					showDiv.style.display = "block";
+
 					document.getElementById(id).className = "task";
-					hidDiv.style.display = "none";
+					
 					id = val;
 
 					item.className = "selected";
