--- a/profile.html
+++ b/profile.html
@@ -262,8 +262,8 @@
         	<label class = "title">Entry Information</label>
 			<br>
 			<br>
-			<div class="empty-insight" id="empty-div" style = "height:150px";>
-				<div class="emptyemoji">👈🏼</div>
+			<div class="empty-insight" id="empty-div" style = "height:158px">
+				<div class="emptyemoji" style = "padding: 9px;">👈🏼</div>
 				<div class="emptytext">Select one of these insights to view data</div>
 			</div>
 			<div id = "entry-info" class = "symptoms-selected-div-block" id= "entry-details-block">
