--- a/profile.html
+++ b/profile.html
@@ -165,9 +165,9 @@
 			</html>
 
 		<div class= "multi-selector">
-		<div class = "select-field" style = "background-color: transparent;">
+		<!-- <div class = "select-field" style = "background-color: transparent;">
 			<label class = "summary" style = "color:grey">Click on a date to see entry information</label>
-				 </div>
+				 </div> -->
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll; height: 250px;margin-bottom: 10px;background-color: transparent;">
 				   <label class = "title" style = "background-color: transparent;""></label>
