--- a/profile.html
+++ b/profile.html
@@ -283,7 +283,7 @@
 			<br>
 			<br>
 
-			<div class = "goalstab" style = "margin-top: -15px;">
+			<div class = "goalstab" style = "margin-top: -9px;">
 				<div class = "mini"  style = "text-align: left;">
 					<label class = "summary">
 						Headaches are most associated with poor focus
@@ -306,9 +306,9 @@
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">View more insights</a><br/>
 
-			<div class = "avatar" style = "left:450px; top:10px">
+<!-- 			<div class = "avatar" style = "left:450px; top:10px">
 				<img class="logo" src="magnifying-glass.png" width = "70px">
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
