--- a/experiments.html
+++ b/experiments.html
@@ -53,6 +53,8 @@
         	<label class = "title">Experiment duration</label>
 			<br>
 			<br>
+
+			<div class = "empty-insight">
 			<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
 			<div class="field">
@@ -65,6 +67,7 @@
 		   </div>
 
 		   <label class = "profilename" style = "font-size:32px">weeks</label>
+		   </div>
 
 
 			<div class = "avatar" style = "top:8px; left:400px">
