--- a/experiments.html
+++ b/experiments.html
@@ -54,7 +54,7 @@
 			<br>
 			<br>
 
-			<div class = "empty-insight">
+			<div class = "changer2">
 			<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
 			<div class="field">
