--- a/profile.html
+++ b/profile.html
@@ -389,8 +389,8 @@
 			var hideDiv = document.getElementById("empty-div");
 			var showDiv = document.getElementById("entry-details-block");
 
-			hideDiv.style.display = "none";
-			showDiv.style.display = "block";
+			/* hideDiv.style.display = "none";
+			showDiv.style.display = "block"; */
 
 			entryInfo.innerHTML = entryContent[val - 1];
 
