--- a/profile.html
+++ b/profile.html
@@ -386,10 +386,10 @@
 			var entryInfo = document.getElementById("entry-info-text");
  			entryInfo.classList.remove("test");
 
-			var hideDiv = document.getElementById("empty-div");
+			/*var hideDiv = document.getElementById("empty-div");
 			var showDiv = document.getElementById("entry-details-block");
 
-			/* hideDiv.style.display = "none";
+			hideDiv.style.display = "none";
 			showDiv.style.display = "block"; */
 
 			entryInfo.innerHTML = entryContent[val - 1];
