--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 
 <body style="background:#f0effa;display: grid;">
 
-	<div class = "contentwrap">
+	<div class = "contentwrap" style = "margin-top: 30px">
 	<div class = "wrapper" id = "profileinfo">
 
 		<div class = "profile">
@@ -380,7 +380,7 @@
 			docnum.value = "";
 	   }
 
-	   
+
 	   /*var hideDiv = document.getElementById("empty-div");
 			var showDiv = document.getElementById("entry-details-block");
 
