--- a/profile.html
+++ b/profile.html
@@ -262,7 +262,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 			<br>
-			<div class="empty-insight-history" id="empty-div" style = "height:158px">
+			<div class="empty-insight-history" id="empty-div" style = "height:158px; display:none;">
 				<div class="emptyemoji" style = "padding: 9px;">👈🏼</div>
 				<div class="emptytext">Select one of these insights to view data</div>
 			</div>
