--- a/experiments.html
+++ b/experiments.html
@@ -42,7 +42,7 @@
 		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "consultDoctor()" id="log">Consult doctor</a><br/>
 
 		<div class = "avatar" style = "top:5px; left:390px">
-			<img class="logo" src="exp2.png" width = "110px">
+			<img class="logo" src="test-tube.png" width = "110px">
 		</div>
 	</div>
 
@@ -54,7 +54,7 @@
 			<br>
 			<br>
 
-			<div class = "changer" style = "position:relative; left:10px">
+			<div class = "changer" style = "position:relative; left:150px">
 			<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
 			<div class="field">
@@ -71,7 +71,7 @@
 
 
 			<div class = "avatar" style = "top:8px; left:400px">
-				<img class="logo" src="clock2.png" width = "110px">
+				<img class="logo" src="clock.png" width = "110px">
 			</div>
         </div>
 
