--- a/profile.html
+++ b/profile.html
@@ -266,7 +266,7 @@
 				<div class="emptyemoji" style = "padding: 9px;">👈🏼</div>
 				<div class="emptytext">Select one of these insights to view data</div>
 			</div>
-			<div id = "entry-info" class = "symptoms-selected-div-block" id= "entry-details-block">
+			<div id = "entry-info" class = "symptoms-selected-div-block" id= "entry-details">
 				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 			</div>
 
