--- a/profile.html
+++ b/profile.html
@@ -165,8 +165,7 @@
 			</html>
 
 		<div class= "multi-selector">
-		<!-- <div class = "select-field" style = "background-color: transparent;">
-			<label class = "summary" style = "color:grey">Click on a date to see entry information</label>
+		<div class = "select-field" style = "background-color: transparent;">
 				 </div> -->
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 264px;margin-bottom: 19px;background-color: transparent;margin-top: 13px;">
