--- a/profile.html
+++ b/profile.html
@@ -166,8 +166,8 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field" style = "background-color: transparent;">
-			<!-- <label class = "summary" style = "color:grey">Click on a date to see entry information</label>
-				 </div> --> -->
+			<!-- <label class = "summary" style = "color:grey">Click on a date to see entry information</label> -->
+				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 264px;margin-bottom: 19px;background-color: transparent;margin-top: 13px;">
 				   <label class = "title" style = "background-color: transparent;""></label>
